--- a/public/style.css
+++ b/public/style.css
@@ -2,3 +2,134 @@
   text-decoration: none;
   color: white;
 }
+
+.navClass{
+  width: 100%;
+  height: 50px;
+  background: gray;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center; 
+  gap: 2rem;
+  z-index: 0;
+}
+
+.loginClass{
+ color:white;
+ cursor: pointer;
+ text-align: center; 
+ height: 100%;
+ margin: auto 0;
+ display: flex; 
+ align-items: center;
+}
+
+
+.logoutClass{
+   color:  white;
+   cursor: pointer;
+   text-align: center;
+   height: 100%;
+   margin: auto 0;
+   display: flex;
+   align-items: center;
+}
+
+
+.footerClass{
+  text-decoration: none ;
+  color: white;
+}
+
+
+.headerAboutUsClass{
+  text-align : center; 
+  margin-top : 100px  ;
+  padding : 20px;
+  font-size: 60px;
+}
+
+
+.HeaderParClass{
+  width: 35rem ;
+  margin : auto;
+  text-align: center;
+  font-size: 25px;
+ 
+}
+
+.carouselClass{
+  width :25%;
+  margin :auto;
+  padding-top: 100px;
+}
+
+.carouselClass img{
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+}
+
+.carouselClass h3{
+  position: relative;
+  top: 50%;
+  color: black;
+}
+
+.contactClass{
+  padding-top: 100px;
+  width: 60%;
+  margin: auto;
+}
+
+.contactClass h3{
+  font-size: 80px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  text-align: center;
+}
+
+.contactClass label{
+  text-align: left;
+}
+
+
+.contactClass input   {
+  width: 230px;
+  height: 70px;
+  background-color:#f2f2f2;
+}
+
+
+.contactClass textarea{
+  height: 200px;
+  background-color :#f2f2f2;
+}
+
+button{
+  width: 200px;
+  height: 50px;
+}
+
+
+.infoClass img{
+  width: 130px;
+  margin-left: 130px;
+  margin-top: 200px;
+  border: 1px solid gray;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+
+.infoClass h3  {
+   margin-left: 120px;
+   padding-top: 20px;
+   
+}
+
+.infoClass p{
+ text-align: center;
+ padding-left: 20px;
+}
