--- a/public/style.css
+++ b/public/style.css
@@ -165,3 +165,12 @@ right: 0;
   flex-direction: column;
   gap: 2rem
 }
+.map {
+  height: 100%;
+}
+
+.map-container {
+  height: 400px;
+  width: 400px;
+  margin-top: 5rem ;
+  }
