--- a/public/style.css
+++ b/public/style.css
@@ -10,6 +10,11 @@
 .u-app {
   min-height: 90vh;
 }
+.input {
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
 .navClass{
   width: 100%;
   height: 50px;
@@ -83,7 +88,7 @@
 }
 
 .contactClass{
-  width: 60%;
+  width: 50%;
   margin: auto;
 }
 
@@ -191,18 +196,7 @@ right: 0;
     
   }
 
-  
-   body{
- 
-  
-background-image : linear-gradient(rgba(0, 0, 0, 0.7),rgba(0, 0, 0, 0.7)) , url("https://images.unsplash.com/photo-1511578314322-379afb476865?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8Y29ycG9yYXRlJTIwZXZlbnR8ZW58MHx8MHx8&ixlib=rb-1.2.1&w=1000&q=80");
-  min-width: 100%;
-  min-height: 100%;
-  background-size: cover;
-  background-position: center;
-  
-  
-} 
+
 
 .formDiv{
   background-color:white;
