--- a/src/App.css
+++ b/src/App.css
@@ -145,3 +145,8 @@ ul {
 
 }
 /* /////////////////////// */
+.input {
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+}
