--- a/src/components/Profiled.css
+++ b/src/components/Profiled.css
@@ -128,3 +128,26 @@ background-image: linear-gradient( 135deg, rgba(91, 226, 55, 0.92) 10%, #49C628 
 	font-size: 22px;
 	text-decoration: none;
 }
+
+.vector1 {
+	position: absolute;
+	top: 0px;
+	left: -100px;
+	opacity: .4;
+  } 
+  .vector2 {
+	position: absolute;
+	top: 0;
+	left: 1200px;
+	opacity: .7;
+	z-index: -9;
+  } 
+  
+  .vector7 {
+	position: absolute;
+	top: 500px;
+	left: 300px;
+	opacity: .5;
+	z-index: -9;
+  
+  }
