--- a/public/style.css
+++ b/public/style.css
@@ -211,20 +211,23 @@ right: 0;
 
 
 
-
 .formDiv{
-  background-color:white;
+  background-color: rgba(167, 165, 165, 0.979);
   text-align: center;
   margin-bottom: 100px;
   border-radius: 30px;
- 
- 
-  
-  /* box-shadow: -30px 30px 20px rgba(0, 0, 0, 0.3); */
+  width: 800px;
+  margin: auto;
+}
+
+
+.ali {
+  text-align: center;
+}
 
     
 
-}
+
 
 
 
@@ -261,7 +264,7 @@ right: 0;
   color: white;
   width: 200px;
   margin-left: 30px;
-  margin-bottom: 100px;
+  margin-bottom: 10px;
   
 }
 
@@ -276,9 +279,9 @@ right: 0;
 
 .check{
   position: relative;
-  top: 20px;
+  top: 10px;
   left: 10px;
-  padding:50px;
+  padding:10px;
   margin-left: 10px;
   width: 50px;
   
