--- a/src/App.css
+++ b/src/App.css
@@ -150,3 +150,51 @@ ul {
   justify-content: space-between;
   justify-items: center;
 }
+
+/* ///////////////// */
+.con {
+  width: 1200px;
+  margin: auto;
+}
+.eventGt {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+.eventGi {
+ margin-top: 10px;
+ margin-left: 0;
+}
+
+.eventGi img {
+  width: 500px;
+  height: 400px;
+}
+.eventGi h4 {
+  font-size: 24px;
+  font-weight: bold;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 0;
+}
+.eventGi p {
+  font-size: 17px;
+}
+.eventG1 p {
+  font-size: 17px;
+
+}
+.attend {
+  background-color: gray;
+}
+
+.replay1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.rplay {
+  margin: 20px
+}
