--- a/src/components/Profiled.css
+++ b/src/components/Profiled.css
@@ -48,30 +48,14 @@
 }
 
 button.btn {
-	background-image: linear-gradient( 135deg, #43CBFF 10%, #9708CC 100%);
-	box-shadow: 0px 0px 15px 0px #63458A;
-	background-attachment: fixed;
-	background-size: cover;
-	border-radius: 20px;
+	background-color :darkcyan;
 	padding: 12px 30px;
 	margin: 20px 0;
 	outline: none;
 	border: none;
 	color: #FFF;
-	
 	cursor: pointer;
-	transition: all 0.3s linear;
 }
-button.btn:hover {
-		box-shadow: 0px 5px 5px 0px rgba(217, 217, 217, 0.99);
-	
-}
-button.btn:active {
-	box-shadow: 0px 0px 0px 0px #63458A;
-	transform: translateY(4px);
-	
-}
-
 .span {
 	margin: 1px;
 	padding: 12px 22px;
@@ -110,6 +94,7 @@ background-image: linear-gradient( 135deg, rgba(91, 226, 55, 0.92) 10%, #49C628 
 }
 
 /* //////////////////////////// */
+
 .col {
 	font-size: 25px;
 	color: #344055;
