--- a/public/style.css
+++ b/public/style.css
@@ -54,6 +54,7 @@
 .headerAboutUsClass{
   text-align : center; 
   padding :  0 20px;
+  margin-top: 20px;
 }
 
 
@@ -84,14 +85,15 @@
 }
 
 .contactClass{
-  width: 50%;
+  width: 60%;
   margin: auto;
+ 
 }
 
 .contactClass h3{
-  font-size: 80px;
-  margin-top: 100px;
-  margin-bottom: 100px;
+  font-size:50px;
+  margin-top: 15px;
+  margin-bottom: 15px;
   text-align: center;
 }
 
@@ -101,7 +103,8 @@
 
 
 .contactClass input   {
-  width: 230px;
+
+  width: 100%;
   height: 70px;
   background-color:#f2f2f2;
 }
@@ -121,7 +124,7 @@ button{
 .infoClass img{
   width: 130px;
   margin-left: 130px;
-  margin-top: 200px;
+  margin-top: 50px;
   border: 1px solid gray;
   border-radius: 50%;
   padding: 10px;
@@ -157,14 +160,13 @@ right: 0;
   padding: auto 5rem;
 }
 .u-main {
-  border : solid black;
   margin: 3rem auto;
   min-height: 100vh;
   padding:3rem;
   background: white;
-  border-radius: 25px;
   display: flex;
   flex-direction: column;
+  
   gap: 2rem
 }
 .map {
@@ -172,10 +174,10 @@ right: 0;
 }
 
 .map-container {
-  height: 200px;
+  height: 400px;
   width: 400px;
   margin: auto;
-  margin-bottom: 130px;
+  margin-bottom: 40px;
   }
 
   
@@ -313,7 +315,7 @@ h6{
 
 
 
-/////////////////////////////////////////////////////////////////////////
+/* ///////////////////////////////////////////////////////////////////////// */
 
 .deaialsContainer{
   margin-left: 50px;
@@ -583,7 +585,178 @@ a {
   }
 }
 
+.panel {
+  border: none;
+  box-shadow: none;
+}
 
+.panel-heading {
+  border-color:#eff2f7 ;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.panel-title {
+  color: #2A3542;
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 0;
+  margin-top: 0;
+  font-family: 'Open Sans', sans-serif;
+}
+
+/* /product list/ */
+
+.prod-cat li a{
+  border-bottom: 1px dashed #d9d9d9;
+}
+
+.prod-cat li a {
+  color: #3b3b3b;
+}
+
+.prod-cat li ul {
+  margin-left: 30px;
+}
+
+.prod-cat li ul li a{
+  border-bottom:none;
+}
+.prod-cat li ul li a:hover,.prod-cat li ul li a:focus, .prod-cat li ul li.active a , .prod-cat li a:hover,.prod-cat li a:focus, .prod-cat li a.active{
+  background: none;
+  color: #ff7261;
+}
+
+.pro-lab{
+  margin-right: 20px;
+  font-weight: normal;
+}
+
+.pro-sort {
+  padding-right: 20px;
+  float: left;
+}
+
+.pro-page-list {
+  margin: 5px 0 0 0;
+}
+
+.product-list img{
+  width: 100%;
+  border-radius: 4px 4px 0 0;
+  -webkit-border-radius: 4px 4px 0 0;
+}
+
+.product-list .pro-img-box {
+  position: relative;
+}
+.adtocart {
+  background: #fc5959;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  color: #fff;
+  display: inline-block;
+  text-align: center;
+  border: 3px solid #fff;
+  left: 45%;
+  bottom: -25px;
+  position: absolute;
+}
+
+.adtocart i{
+  color: #fff;
+  font-size: 25px;
+  line-height: 42px;
+}
+
+.pro-title {
+  color: #5A5A5A;
+  display: inline-block;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.product-list .price {
+  color:#fc5959 ;
+  font-size: 15px;
+}
+
+.pro-img-details {
+  margin-left: -15px;
+}
+
+.pro-img-details img {
+  width: 100%;
+}
+
+.pro-d-title {
+  font-size: 16px;
+  margin-top: 0;
+}
+
+.product_meta {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+  padding: 10px 0;
+  margin: 15px 0;
+}
+
+.product_meta span {
+  display: block;
+  margin-bottom: 10px;
+}
+.product_meta a, .pro-price{
+  color:#fc5959 ;
+}
+
+.pro-price, .amount-old {
+  font-size: 18px;
+  padding: 0 10px;
+}
+
+.amount-old {
+  text-decoration: line-through;
+}
+
+.quantity {
+  width: 120px;
+}
+
+.pro-img-list {
+  margin: 10px 0 0 -15px;
+  width: 100%;
+  display: inline-block;
+}
+
+.pro-img-list a {
+  float: left;
+  margin-right: 10px;
+  margin-bottom: 10px;
+}
+
+.pro-d-head {
+  font-size: 18px;
+  font-weight: 300;
+}
+
+.btn-send {
+  padding: 0 00px;
+  display: inline-block;
+  margin-left: -8.0px;
+  width:fit-content;
+  padding-bottom: 0.5rem;
+}
+
+.dd:hover {
+  animation-name: grow;
+  animation-fill-mode: forwards;
+  animation-duration: 500ms;
+}
+@keyframes grow {
+  to {transform: scale(1.1);}
+}
 
   
   
