changed the style of the cards, and added the sweet alert

--- a/public/card.css
+++ b/public/card.css
@@ -63,7 +63,9 @@
 .cardsHolder {
 
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
-  gap: 7.5rem;
-  justify-content: space-evenly;
+  gap: 0rem;
+  align-items: center;
+  margin-top: -2rem;
 }
