--- a/src/components/Profiled.css
+++ b/src/components/Profiled.css
@@ -1,7 +1,8 @@
 
 .member {
-	background-image: linear-gradient(to top, rgba(236, 234, 235, 0.5) 0%, rgba(255, 255, 255, 0.2) 50%);
-	background: rgba(255, 255, 255, 0.95);
+	/* background-image: linear-gradient(to top, rgb(21, 20, 20) 0%, rgb(21, 20, 20) 50%); */
+	background: rgb(21, 20, 20);
+	background: linear-gradient(to bottom, rgb(21, 20, 20) 35%, rgba(21, 20, 20,0) 50%);
 	width: auto;
 	max-width: 300px;
 	height: 300px;
@@ -10,10 +11,10 @@
 	text-align: center;
 	padding: 20px 10px;
 	position: relative;
-	background: #B8BEDD;
-	background-image: linear-gradient(to top, #fbc2eb 50%, #a6c1ee 100%);
+	/* background-image: linear-gradient(to top, rgba(255, 94, 20,0.9) 40%,  rgb(21, 20, 20, 1) 80%); */
 	background-attachment: fixed;
 	background-size: cover;
+	color: white;
 }
 
 .member .img-member {
